--- a/trunk/nbproject/private/private.properties
+++ b/trunk/nbproject/private/private.properties
@@ -3,5 +3,5 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Shiyang\\AppData\\Roaming\\NetBeans\\7.2.1\\build.properties
-work.dir=C:\\Users\\Shiyang\\Desktop\\project-aether22
+user.properties.file=C:\\Users\\Robert\\AppData\\Roaming\\NetBeans\\7.3\\build.properties
+work.dir=C:\\Users\\Robert\\Desktop\\project-aether2
