--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -27,12 +27,14 @@ dist.jar=${dist.dir}/ProjectAether2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jl1.0.1.jar=libs/jl1.0.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jl1.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
