--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Documents and Settings\\38800542\\Application Data\\NetBeans\\7.3\\build.properties
+user.properties.file=C:\\Users\\Liu\\AppData\\Roaming\\NetBeans\\7.3\\build.properties
